2003-04-21  Andreas Kupries  <andreask@pliers.activestate.com>

	* uuencode.test: Added code to suppress output from the log
	  package during the test.

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* uuencode.man:
	* base64.tcl:
	* base64.man:
	* pkgIndex.tcl: Fixed bug #614591. Set version of the base64
	  package to to 2.2.2. uuencode is now at version 1.0.2
	  throughout.

2003-03-24  Andreas Kupries  <andreask@activestate.com>

	* uuencode.test: 
	* uuencode.tcl: Fixed bug #700327, reported by Roger Niva
	  <rniva@users.sourceforge.net>. Added '--' before actual data
	  argument to prevent mishandling of data beginning with a dash
	  ('-'). Extended the testsuite to cover these cases.

2003-02-23  David N. Welton  <davidw@dedasys.com>

	* base64.tcl: Bumped base64.tcl Tcl requirement to 8.2, swapped
	out regsub for string map.

2003-01-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* yencode.tcl:
	* uuencode.tcl: Added Tcl 8.2 version requirement, bumped versions
	and added copyright to man pages. Fixed uuencode to work with Tcl 8.2

2002-06-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl:
	* base64.tcl:
	* base64.n:
	* base64.man: Bumped base64 to version 2.2.1.

	* pkgIndex.tcl:
	* uuencode.tcl:
	* uuencode.n:
	* uuencode.man: Bumped uuencode to version 1.0.1.

2002-05-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* yencode.test: Fixed SF Tcllib Bug #548354 so that the datafile
	  used by the test is found even if the build directory is outside
	  of the tcllib directory hierarchy. Original patch provided by Larry
	  Virden <lvirden@users.sourceforge.net>, changed by me to work in
	  my configuration too.

2002-04-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uuencode.tcl: 
	* yencode.tcl:
	* base64.tcl: Fixed decoding of empty string in tcl
	  implementation. Fixes bug #548112.

2002-04-17  Pat Thoyts  <patthoyts@users.sourceforge.net>
